--- a/irst.html
+++ b/irst.html
@@ -3,76 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Задание с уравнением и таймером</title>
-  <style>
-    body, html {
-      height: 100%;
-      margin: 0;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #f0f0f0;
-    }
-    .container {
-      text-align: center;
-      background: white;
-      padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
-      width: 450px;
-    }
-    button {
-      font-size: 24px;
-      padding: 15px 30px;
-      margin: 10px;
-      cursor: pointer;
-      border-radius: 8px;
-      border: 2px solid #555;
-      background-color: #fff;
-      transition: 0.3s;
-      min-width: 120px;
-    }
-    button:hover {
-      background-color: #e0e0e0;
-    }
-    input[type="text"] {
-      font-size: 24px;
-      padding: 10px;
-      width: 220px;
-      border-radius: 8px;
-      border: 2px solid #555;
-      margin-top: 20px;
-      text-align: center;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .equation {
-      font-weight: bold;
-      font-size: 18px;
-      margin: 30px 0 30px 0;
-      letter-spacing: 3px;
-      color: #333;
-      user-select: text;
-      white-space: nowrap;
-      overflow-x: auto;
-    }
-    .code, .error, .timer {
-      display: block;
-      font-weight: bold;
-      font-size: 20px;
-      margin: 15px 0;
-    }
-    .code {
-      color: green;
-    }
-    .error {
-      color: red;
-    }
-    .timer {
-      color: #333;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
@@ -98,16 +29,14 @@
     let timerInterval = null;
     let challengeActive = false;
 
-    // Выберите текущий тест
     let currentTestCode = 'test1';
 
     function generateEquation() {
       let parts = [];
-      let maxDigit = 20; // ограничим максимум числа
-      let remaining = Math.floor(Math.random() * 51) + 50; // случайное число от 50 до 100
+      let remaining = Math.floor(Math.random() * 51) + 50;
       let count = 10;
       let sum = remaining;
-      // Сгенерируем 9 чисел, потом посчитаем 10-е как оставшееся, чтобы сумма была равна remaining
+
       for (let i = 0; i < count - 1; i++) {
         let maxForPart = remaining - (count - 1 - i);
         const value = Math.floor(Math.random() * maxForPart) + 1;
@@ -116,7 +45,6 @@
       }
       parts.push(remaining);
 
-      // Перемешаем для случайности расположения
       for (let i = parts.length - 1; i > 0; i--) {
         const j = Math.floor(Math.random() * (i + 1));
         [parts[i], parts[j]] = [parts[j], parts[i]];
